Trivia King - fixed card sizes in the trivia page
* the category name card height was messed up
* the question widths weren't full and aligned with the category cards

--- a/trivia-king/src/app/pages/trivia-page/question/question.component.css
+++ b/trivia-king/src/app/pages/trivia-page/question/question.component.css
@@ -1,8 +1,8 @@
 .mat-card {
-    width: 150px;
+    max-width: none;
     height: 165px;
     padding: 0px 12px;
-    margin: 10px 0px;
+    margin: 10px 10px 10px 0px;
 }
 /*
 for 6 questions, changed height from 165px to 135 px;
